Refactor GTN_VacuumNuke